hphp/test/zend/good/ext/json/tests/fail001.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('json')) die('skip: json extension not available');
}
